Keeping the same tab open when changing printers. Fixing flicker on changing printers. Code cleanup.

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -92,6 +92,9 @@ header
     flex-flow column
     flex 1 1 auto
 
+    &.ng-hide
+      display none
+
 
 footer
   flex 0 0 auto
